# TR_datastructures

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  codecov.yml  vcpkg.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: build_test.yml  docs.yml
benchmarks/: CMakeLists.txt
benchmarks/stack/: bench_stack.c
cmake/: tr_datastructures-config.cmake.in  tr_version.h.in
docs/: Doxyfile
examples/: CMakeLists.txt
examples/queue/: example_queue.c
examples/stack/: example_stack.c
fuzz/: CMakeLists.txt
fuzz/stack/: fuzz_stack.c
include/: tr_datastructures.h
include/tr_datastructures/: tr_export.h  tr_queue.h  tr_result.h  tr_stack.h  tr_types.h  tr_version.h
scripts/: generate_docs.bat  generate_docs.sh
src/: CMakeLists.txt  tr_datastructures.c
src/internal/include/: tr_internal.h
src/stack/: stack.c  stack_array.c  stack_ll.c  stack_shared.h
tests/: CMakeLists.txt
tests/stack/: test_stack.c
